# Cmake

./: README.md
documents/: build_config.txt  cmake_variable.txt  command_cmd.txt  fragment.txt  link
study/boost/: CMakeLists.txt
study/projects/subbinary/: CMakeLists.txt  main.cpp
study/projects/sublibrary1/: CMakeLists.txt
study/projects/sublibrary1/include/sublib1/: sublib1.h
study/projects/sublibrary1/src/: sublib1.cpp
study/projects/sublibrary2/: CMakeLists.txt
study/projects/sublibrary2/include/sublib2/: sublib2.h
study/simple/simple1/: CMakeLists.txt  main.cpp
study/simple/simple2/: CMakeLists.txt
study/simple/simple2/src/: main.cpp
study/simple/simple3/: CMakeLists.txt
study/simple/simple3/src/: hello.cpp
study/simple/simple4/: CMakeLists.txt
study/simple/simple5/: CMakeLists.txt
study/simple/simple5/include/: hello.h
study/simple/simple6/: CMakeLists.txt
